--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,21 +18,32 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1>
+        	<a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a>
+        </h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <h4>Topics</h4>
+        	<p><a href="{{ '/' | relative_url }}">Home</a></p>
+        	<p><a href="{{ 'topics/philosophy/' | relative_url }}">Philosophy</a> ({{ site.categories.philosophy | size }})</p>
+			<p><a href="{{ 'topics/latin/' | relative_url }}">Latin</a> ({{ site.categories.latin | size }})</p>
+			<p><a href="{{ 'topics/ancient-greek/' | relative_url }}">Ancient Greek</a> ({{ site.categories.ancient-greek | size }})</p>
 
-        {% if site.github.is_project_page %}
+        <!-- 
+{% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
+ -->
 
-        {% if site.github.is_user_page %}
+        <!-- 
+{% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
+ -->
 
         {% if site.show_downloads %}
         <ul class="downloads">
@@ -56,4 +67,5 @@
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
   </body>
+  
 </html>
