--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,3 +25,9 @@ img[alt="Logo"] {
 ul {
 	line-height: 1.4;
 }
+
+mark {
+  background-color: #fff2ae;  /* choose your color */
+  padding: 0 0.15em;
+  border-radius: 0.2em;
+}
